# cal_agent

./: .clinerules  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  test_markdown_conversion.py
app/: main.py  main_complete.py
app/agent_schema/: agent_master_schema.py
app/agents/: __init__.py  cal_master_agent.py  customer_connect.py  doc_master.py  editor.py  engineer.py  pro_mentor.py  rival_watcher.py  sales.py  tech_wiz.py  trend_tracker.py
app/api/: response_formatter.py
app/config/: agent_list.py  config.py  config_template.py  manager.py
app/context/: context_injector.py  document_context_manager.py  feedback_impact_tracker.py  feedback_manager.py  relevance_scorer.py
app/llm/: manager.py
app/models/: model_list.py
app/orchestrator/: agent_capabilities.py  agent_orchestrator.py  workflow_manager.py
app/reports/: collaborative_generator.py  integration_verification_test.py  report_generation_service.py  section_manager.py  template_processor.py  test_template_standalone.py  test_template_system.py
app/schema/: master_schema.py  openai_schema.py
app/storage/: cloud_storage.py  document_repository.py  firestore_db.py
app/templates/: feedback_display.html  feedback_input.html  history.html  index.html  market_research.html  report_interface.html  simple_report_generator.html  ui_test_suite.html  workflow_dashboard.html
app/tests/: end_to_end_test.py  test_firestore.py  test_grok.py
app/utils/: document_processor.py  feedback_processor.py  llm_counter.py  markdown_converter.py  (+1 more)
(+51 files in other folders)
